--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "weatherserviceapp",
   "version": "0.0.0",
   "license": "MIT",
+  "engines": {
+    "node": "6.11.0"
+  },
   "scripts": {
     "heroku-prebuild": "npm install -g http-server",
     "heroku-postbuild": "ng build --prod",
