--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "node": "6.11.0"
   },
   "scripts": {
-    "heroku-prebuild": "npm install -g http-server",
+    "heroku-prebuild": "npm install -g http-server && npm install -g angular-cli",
     "heroku-postbuild": "ng build --prod",
     "start": "http-server dist/",
     "ng": "ng",
