--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
   },
   "scripts": {
     "heroku-prebuild": "npm install -g http-server && npm install -g angular-cli",
-    "heroku-postbuild": "ng build --prod",
+    "heroku-postbuild": "ng build --aot -prod",
+    "postinstall": "ng build --aot -prod",
     "start": "http-server dist/",
     "ng": "ng",
-    "start": "ng serve",
+    "start-local": "ng serve",
     "start-dock": "ng serve -H 0.0.0.0",
     "build": "ng build",
     "test": "ng test",
