--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   },
   "scripts": {
     "heroku-prebuild": "npm install -g http-server && npm install -g angular-cli",
-    "heroku-postbuild": "ng build --aot -prod",
-    "postinstall": "ng build --aot -prod",
+    "heroku-postbuild": "ng build --prod",
     "start": "http-server dist/",
     "ng": "ng",
     "start-local": "ng serve",
